// 交換受け取りレスポンス
syntax = "proto3";

package api.game;

import "exchange/userExchange/user_exchange.proto";
import "exchange/userExchangeItem/user_exchange_item.proto";

message ExchangeReceiveResponse {
  optional UserExchange user_exchange = 1;
  optional UserExchangeItem user_exchange_item = 2;
}
